Kubernetes/my-service-strokes.yml
apiVersion: v1
kind: Service
metadata:
  name: my-strokes-service
  labels:
    app: my-strokes-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-strokes-api
